# ModalMuChecker

./: .gitignore  CMakeLists.txt  DataPrinter.cpp  DataPrinter.h  NaturalSort.h  README.md  main.cpp
DataRepresentations/: Formula.cpp  Formula.h  Lts.cpp  Lts.h
formulaAlgorithms/: CMakeLists.txt
formulaAlgorithms/inc/: AlternatingNestingDepthCalculator.h  DependentAlternationDepthCalculator.h  EmersonLeiAlgorithm.h  NaiveAlgorithm.h  NestingDepthCalculator.h
formulaAlgorithms/src/: AlternatingNestingDepthCalculator.cpp  DependentAlternationDepthCalculator.cpp  EmersonLeiAlgorithm.cpp  NaiveAlgorithm.cpp  NestingDepthCalculator.cpp
parsing/: CMakeLists.txt  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
parsing/inc/: Formula.h  Lts.h  Parser.h  Tokenizer.h
parsing/src/: Formula.cpp  Lts.cpp  Parser.cpp  Tokenizer.cpp
resources/additional/: player2_can_win.mcf  robots_2.aut
resources/boardgame/: robots_100.aut  robots_150.aut  robots_200.aut  robots_350.aut  robots_50.aut
resources/ccp/: german_linear_2.1.aut  german_linear_3.1.aut  german_linear_4.1.aut  infinite_run_no_access.mcf  infinitely_often_exclusive.mcf  invariantly_eventually_fair_shared_access.mcf  invariantly_inevitably_exclusive_access.mcf  invariantly_possibly_exclusive_access.mcf
resources/demanding/: README.txt  demanding_children_10.aut  demanding_children_2.aut  demanding_children_3.aut  demanding_children_4.aut  demanding_children_5.aut  demanding_children_6.aut  demanding_children_7.aut  demanding_children_8.aut  demanding_children_9.aut  new_questions_only_after_answer.mcf  other_childs_claim_attention.mcf  questions_can_be_answered.mcf  questions_will_be_answered.mcf
resources/dining/: dining_2.aut  dining_3.aut  dining_4.aut  dining_5.aut  dining_6.aut  dining_7.aut  dining_8.aut  invariantly_inevitably_eat.mcf  invariantly_plato_starves.mcf  invariantly_possibly_eat.mcf  plato_infinitely_often_can_eat.mcf
unit_testing/: CMakeLists.txt  FormulaChecking.cpp
